kubernetes/apps/monitor/gatus/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: monitor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "status.${SECRET_DOMAIN}"
    gethomepage.dev/app: "gatus"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Gatus"
    gethomepage.dev/description: "Automated developer-oriented status page"
    gethomepage.dev/href: "https://status.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/category: "Kubernetes"
    gethomepage.dev/icon: "sh-gatus.png"
    gethomepage.dev/widget.type: gatus
    gethomepage.dev/widget.url: "https://status.${SECRET_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`status.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        # - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: gatus
          port: 8080
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: "${SECRET_DOMAIN/./-}-monitor-tls"
